--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "mongodb": "^3.6.4",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "prop-types": "^15.7.2"
   }
 }
